<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yaml_to_warehouse</name>
  <version>0.0.1</version>
  <description>Convert Robowflex benchmark problems into a ROS MoveIt Warehouse database</description>
  <maintainer email="mark@picknik.ai">Mark Moll</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/mamoll/yamltowarehouse</url>

  <author email="mark@picknik.ai">Mark Moll</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>libfmt</depend>
  <depend>yaml-cpp</depend>
  <depend>Eigen3</depend>
  <depend>geometry_msgs</depend>
  <depend>geometric_shapes</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_warehouse</depend>
  <depend>warehouse_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
